[tool.poetry]
name = "cron"
version = "0.1.0"
description = "cron jobs"
authors = ["Markus A. R. Johansen <90006516+MarkusJohansen@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
